@@ -1,3 +1,8 @@
+Thu Apr 30 00:02:33 CEST 2015
+	Fix issue where resumed connections would not continue
+	unless other requests are active in certain
+	event-loop modes. Thanks to Mike Castillo for reporting. -CG
+
 Wed Apr 15 03:16:18 CEST 2015
 	Fixing issue #3753 (testcase issue). -CG
 
